--- a/front/_layouts/test-maturite.html
+++ b/front/_layouts/test-maturite.html
@@ -1,6 +1,6 @@
 ---
 layout: defaut
-style: /assets/styles/test-maturite.css
+styles: /assets/styles/test-maturite.css
 balisesMeta:
   - propriete: 'og:title'
     contenu: Test de maturité Cyber
