--- a/front/_layouts/page-statique.html
+++ b/front/_layouts/page-statique.html
@@ -1,6 +1,6 @@
 ---
 layout: defaut
-style: /assets/styles/page-statique.css
+styles: /assets/styles/page-statique.css
 ---
 
 <section class="chapeau fond-sombre chapeau-page-statique">
