[SOIN] Extrais le style des cartes item

--- a/front/_layouts/catalogue.html
+++ b/front/_layouts/catalogue.html
@@ -1,6 +1,8 @@
 ---
 layout: defaut
-styles: /assets/styles/catalogue.css
+styles:
+  - /assets/styles/catalogue.css
+  - /assets/styles/carte-item.css
 ---
 
 {{content}}
