--- a/front/_layouts/parcours.html
+++ b/front/_layouts/parcours.html
@@ -1,6 +1,8 @@
 ---
 layout: defaut
-styles: /assets/styles/parcours.css
+styles:
+  - /assets/styles/parcours.css
+  - /assets/styles/carte-item.css
 script: /scripts/parcours.js
 ---
 
