--- a/front/_layouts/service.html
+++ b/front/_layouts/service.html
@@ -1,6 +1,8 @@
 ---
 layout: defaut
-styles: /assets/styles/service.css
+styles:
+  - /assets/styles/service.css
+  - /assets/styles/carte-item.css
 script: /scripts/service.js
 ---
 
