[SOIN] Extrais le style de l’encart cyber départ

--- a/front/_layouts/parcours.html
+++ b/front/_layouts/parcours.html
@@ -3,6 +3,7 @@ layout: defaut
 styles:
   - /assets/styles/parcours.css
   - /assets/styles/carte-item.css
+  - /assets/styles/encart-cyberdepart.css
 script: /scripts/parcours.js
 ---
 
