--- a/front/_layouts/accueil.html
+++ b/front/_layouts/accueil.html
@@ -3,6 +3,7 @@ layout: defaut
 styles:
   - /assets/styles/accueil.css
   - /assets/styles/carte-item.css
+  - /assets/styles/encart-cyberdepart.css
 ---
 
 {{content}}
