--- a/front/_layouts/test-maturite.html
+++ b/front/_layouts/test-maturite.html
@@ -1,6 +1,8 @@
 ---
 layout: defaut
-styles: /assets/styles/test-maturite.css
+styles:
+  - /assets/styles/test-maturite.css
+  - /assets/styles/encart-cyberdepart.css
 balisesMeta:
   - propriete: 'og:title'
     contenu: Test de maturité Cyber
