--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -174,7 +174,8 @@ section {
   }
 }
 
-.votre-espace-cyber {
+.votre-espace-cyber,
+.communaute-mss {
   .contenu-section {
     display: flex;
     flex-direction: column;
