[ARTICLE CRISP] Affiche la section active lors du scroll

--- a/front/_layouts/article-crisp.html
+++ b/front/_layouts/article-crisp.html
@@ -2,6 +2,6 @@
 layout: defaut
 styles:
   - /assets/styles/article-crisp.css
-script: /scripts/service.js
+script: /scripts/article.js
 ---
 {{content}}
