[PAGE CONFIDENTIALITÉ] Corrige le débordement des liens
...uniquement avec Chromium et dérivés

--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -53,6 +53,8 @@
       text-decoration: underline;
       text-underline-offset: 4px;
       text-decoration-thickness: 1px;
+      word-break: normal;
+      overflow-wrap: anywhere;
 
       &:hover {
         text-decoration-thickness: 2px;
