Parle d'aidant **cyber** plutôt que d'aidant tout court
… car c'est le wording qu'on souhaite utiliser.

--- a/front/_includes/encart-cyberdepart.html
+++ b/front/_includes/encart-cyberdepart.html
@@ -8,11 +8,11 @@
       />
       <h2>Bénéficiez d’un diagnostic cyber gratuit</h2>
       <p>
-        Vous souhaitez <b>protéger votre organisation contre les cyberattaques</b> mais ne savez pas par quoi commencer
-        ?
-        <b>Prenez votre cyberdépart</b> avec un <b>premier diagnostic gratuit</b> et anonyme d'une heure dans vos locaux
-        <b>accompagné
-          par un Aidant de la communauté MonAideCyber</b>.
+        Vous souhaitez
+        <b>protéger votre organisation contre les cyberattaques</b> mais ne
+        savez pas par quoi commencer ? <b>Prenez votre cyberdépart</b> avec un
+        <b>premier diagnostic gratuit</b> et anonyme d'une heure dans vos locaux
+        <b>accompagné par un Aidant cyber</b>.
       </p>
       <a href="/cyberdepart" class="bouton primaire">
         Demander mon diagnostic cyber
