--- a/front/assets/styles/article-crisp.scss
+++ b/front/assets/styles/article-crisp.scss
@@ -53,6 +53,7 @@
           }
         }
       }
+
       &[open] summary .entete-filtres .chevron {
         transform: rotate(180deg);
       }
@@ -225,6 +226,10 @@
       line-height: 2.25rem;
       margin: 0;
       padding-bottom: 32px;
+      @include a-partir-de(lg) {
+        font-size: 2rem;
+        line-height: 2.5rem;
+      }
     }
 
     h3 {
@@ -261,6 +266,7 @@
       line-height: 1.5rem;
       padding: 16px 0;
       margin: 0;
+
       &:has(img) {
         padding: 0;
       }
