Utilise un style spécifique pour les contrôles segmentés
...à la place des boutons

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/boutons.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/styles/controle-segmente.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/fonts.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/lib-svelte/dist/assets/style.css" | relative_url }}">
   {% for style in layout.styles %}
