--- a/front/assets/styles/boutons.scss
+++ b/front/assets/styles/boutons.scss
@@ -5,7 +5,7 @@
   font-family: 'Marianne';
   display: flex;
   justify-content: center;
-  border-radius: 8px;
+  border-radius: 6px;
   text-align: center;
   padding: 10px 24px;
   text-decoration: none;
@@ -37,7 +37,7 @@
 }
 
 .bouton.secondaire {
-  border: 1px solid #ddd;
+  border: 1px solid var(--noir);
   color: var(--noir);
   padding: 16px 24px;
   font-size: 1rem;
@@ -75,6 +75,7 @@
 .fond-sombre {
   .bouton.secondaire {
     background: transparent;
+    border: 1px solid white;
   }
 }
 
