[SEO] Ajoute une balise meta `description` à chaque page
...afin de référencer ces pages dans les moteurs de recherche. La configuration se fait dans un fichier au format YML qui contient toutes les descriptions du site.

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -11,6 +11,7 @@
   {% endif %}
 
   <title>{{page.titreHtml}}</title>
+  <meta name="description" content="{{ site.data.meta-description[page.url] | escape }}">
 
   <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/boutons.css" | relative_url }}">
