Affiche un badge pour les agents ANSSI sur le header
...en mode bureau

--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -14,8 +14,18 @@
         src="/assets/images/logo-anssi.svg"
         alt="Logo ANSSI"
       />
+
+      <script
+        type="module"
+        crossorigin
+        src="/lib-svelte/dist/assets/badge-agent-anssi.js"
+      ></script>
+
       <div class="titre-site">
-        <h1>MesServicesCyber</h1>
+        <div class="titre-principal">
+          <h1>MesServicesCyber</h1>
+          <div id="zone-badge-agent-anssi"></div>
+        </div>
         <h2>Innovation ANSSI</h2>
       </div>
     </a>
