Corrige les marges de l’entête en mode bureau

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -128,6 +128,10 @@ header {
     align-items: center;
     justify-content: flex-start;
 
+    @include a-partir-de(lg) {
+      padding: 12px 0;
+    }
+
     .titre-msc {
       display: none;
       margin-left: 32px;
