--- a/front/_includes/encart-cyberdepart.html
+++ b/front/_includes/encart-cyberdepart.html
@@ -11,7 +11,7 @@
         Vous souhaitez
         <b>protéger votre organisation contre les cyberattaques</b> mais ne
         savez pas par quoi commencer ? <b>Prenez votre cyberdépart</b> avec un
-        <b>premier diagnostic gratuit</b> et anonyme d'une heure dans vos locaux
+        <b>premier diagnostic gratuit</b> et anonyme d'une heure dans vos locaux ou en visio
         <b>accompagné par un Aidant cyber</b>.
       </p>
       <a href="/cyberdepart" class="bouton primaire">
