Cache les éléments de navigation et d’identification en mode maintenance

--- a/front/assets/styles/maintenance.scss
+++ b/front/assets/styles/maintenance.scss
@@ -45,3 +45,15 @@ section {
     }
   }
 }
+
+#navigation nav .contenu-section{
+  display: none;
+}
+
+#menu-burger-mobile {
+  display: none;
+}
+
+#zone-identification {
+  display: none;
+}
