--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -18,6 +18,7 @@
 <script src='https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.14.1/lab-anssi-ui-kit.iife.js' nonce="%%NONCE%%"></script>
 <main>
     {% include header.html %}
+    {% include bandeau-maintenance.html %}
     {{ content }}
     {% include centre-aide.html %}
     {% include footer.html %}
