[PAGE CRISP] Utilise le bandeau de titre de l’UI kit

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -23,6 +23,7 @@
 
   /* thème ui kit */
   --titre-couleur-primaire: #0d0c21;
+  --centre-aide-background-entete:#0d0c21 url("/assets/images/motif-fond-service-opacite-16.png");
   --bandeau-titre-background: var(--centre-aide-background-entete);
   --couleur-lien: #0d0c21;
   --filtre-couleur-primaire: brightness(0) invert(3%) sepia(26%) saturate(6797%)
