[ACCUEIL] Remplace les boutons primaires par ceux de l’UI kit

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -30,6 +30,12 @@
   --sommaire-actif-indicateur-couleur: #fed980;
   --sommaire-actif-couleur: #0d0c21;
   --sommaire-mobile-fond: #fff7db;
+  --bouton-secondaire-tertiaire-couleur-texte: #0d0c21;
+  --bouton-arrondi: 8px;
+  --bouton-primaire-couleur-texte: #0d0c21;
+  --bouton-primaire-couleur-fond: #fed980;
+  --bouton-primaire-couleur-fond-survol: #ecca79;
+  --bouton-primaire-couleur-fond-clique: #ddbd70;
 }
 
 :root {
