--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -23,7 +23,8 @@
 
   /* thème ui kit */
   --titre-couleur-primaire: #0d0c21;
-  --centre-aide-background-entete:#0d0c21 url("/assets/images/motif-fond-service-opacite-16.png");
+  --centre-aide-background-entete: #0d0c21
+    url('/assets/images/motif-fond-service-opacite-16.png');
   --bandeau-titre-background: var(--centre-aide-background-entete);
   --couleur-lien: #0d0c21;
   --filtre-couleur-primaire: brightness(0) invert(3%) sepia(26%) saturate(6797%)
@@ -37,6 +38,8 @@
   --bouton-primaire-couleur-fond: #fed980;
   --bouton-primaire-couleur-fond-survol: #ecca79;
   --bouton-primaire-couleur-fond-clique: #ddbd70;
+  --tag-couleur-fond: #eee;
+  --tag-couleur-texte: #161616;
 }
 
 :root {
