--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -1,27 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'fr' }}">
-{% include head.html extra-js=layout.script %}
-<body>
+  {% include head.html extra-js=layout.script %}
+  <body>
+    {% if site.env.MATOMO_ID != '' and site.env.MATOMO_ID != undefined %}
+    <script
+      type="module"
+      src="/scripts/matomo.js"
+      data-id-site-matomo="{{ site.env.MATOMO_ID }}"
+      id="script-matomo"
+    ></script>
+    {% endif %} {% if site.env.MATOMO_URL_TAG_MANAGER != '' and
+    site.env.MATOMO_URL_TAG_MANAGER != undefined %}
+    <script
+      type="module"
+      src="/scripts/matomoTagManager.js"
+      data-url-tag-manager-matomo="{{ site.env.MATOMO_URL_TAG_MANAGER }}"
+      id="script-matomo-tag-manager"
+    ></script>
+    {% endif %} {% if site.env.SENTRY_DSN != '' and site.env.SENTRY_DSN !=
+    undefined %}
+    <script
+      src="https://browser.sentry-cdn.com/7.102.1/bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="/scripts/sentry.js"
+      data-environnement="{{ site.env.SENTRY_ENVIRONNEMENT }}"
+      data-dsn="{{ site.env.SENTRY_DSN }}"
+      id="script-sentry"
+    ></script>
+    {% endif %}
 
-{% if site.env.MATOMO_ID != '' and site.env.MATOMO_ID != undefined %}
-    <script type='module' src='/scripts/matomo.js' data-id-site-matomo="{{ site.env.MATOMO_ID }}" id="script-matomo"></script>
-{% endif %}
-{% if site.env.MATOMO_URL_TAG_MANAGER != '' and site.env.MATOMO_URL_TAG_MANAGER != undefined %}
-    <script type='module' src='/scripts/matomoTagManager.js' data-url-tag-manager-matomo="{{ site.env.MATOMO_URL_TAG_MANAGER }}" id="script-matomo-tag-manager"></script>
-{% endif %}
-
-{% if site.env.SENTRY_DSN != '' and site.env.SENTRY_DSN != undefined %}
-    <script src='https://browser.sentry-cdn.com/7.102.1/bundle.min.js' crossorigin='anonymous'></script>
-    <script type='module' src='/scripts/sentry.js' data-environnement="{{ site.env.SENTRY_ENVIRONNEMENT }}" data-dsn="{{ site.env.SENTRY_DSN }}" id='script-sentry'></script>
-{% endif %}
-
-<script src='https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.20.0/lab-anssi-ui-kit.iife.js' nonce="%%NONCE%%"></script>
-<main>
-    {% include header.html %}
-    {% include bandeau-maintenance.html %}
-    {{ content }}
-    {% include centre-aide.html %}
-    {% include footer.html %}
-</main>
-</body>
+    <script
+      src="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.21.0/lab-anssi-ui-kit.iife.js"
+      nonce="%%NONCE%%"
+    ></script>
+    <main>
+      {% include header.html %} {% include bandeau-maintenance.html %} {{
+      content }} {% include centre-aide.html %} {% include footer.html %}
+    </main>
+  </body>
 </html>
