Affiche les tags de filtre de l'onglet comparaison

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -40,6 +40,14 @@
   --bouton-primaire-couleur-fond-clique: #ddbd70;
   --tag-couleur-fond: #eee;
   --tag-couleur-texte: #161616;
+  --tag-selectionnable-couleur-texte: #0d0c21;
+  --tag-selectionnable-couleur-fond: #fcf1cf;
+  --tag-selectionnable-couleur-fond-survol: #faecb7;
+  --tag-selectionnable-couleur-fond-clique: #f8e5a0;
+  --tag-selectionne-couleur-texte: #0d0c21;
+  --tag-selectionne-couleur-fond: #fed980;
+  --tag-selectionne-couleur-fond-survol: #ecca79;
+  --tag-selectionne-couleur-fond-clique: #ddbd70;
 }
 
 :root {
