Extrais les sections d'accordéon dans un composant dédié

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -9,6 +9,7 @@
   --jaune-msc: #fed980;
   --jaune-msc-hover: #ecca79;
   --jaune-msc-clique: #ddbd70;
+  --jaune-clair-msc: #fff7db;
   --gris-desactive-fond: #e5e5e5;
   --gris-desactive-texte: #929292;
   --gris-secondaire-fond-hover: rgba(0, 0, 0, 0.04);
