[FEEDBACK] Injecte le CTA avis utilisateur
... sur toutes les pages

--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -38,7 +38,7 @@
     ></script>
     <main>
       {% include header.html %} {% include bandeau-maintenance.html %} {{
-      content }} {% include centre-aide.html %} {% include footer.html %}
+      content }} {% include avis-utilisateur.html %} {% include centre-aide.html %} {% include footer.html %}
     </main>
   </body>
 </html>
