Remonte les composants CentreAide et AvisUtilisateur dans le DOM
...afin d'arriver directement dessus après le header lorsqu'on navigue avec le clavier

--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -37,8 +37,9 @@
       nonce="%%NONCE%%"
     ></script>
     <main>
-      {% include header.html %} {% include bandeau-maintenance.html %} {{
-      content }} {% include avis-utilisateur.html %} {% include centre-aide.html %} {% include footer.html %}
+      {% include header.html %} {% include bandeau-maintenance.html %} {%
+      include avis-utilisateur.html %} {% include centre-aide.html %} {{ content
+      }} {% include footer.html %}
     </main>
   </body>
 </html>
