[FEEDBACK] Cache le CTA avis utilisateur derrière un feature flag

--- a/front/_includes/avis-utilisateur.html
+++ b/front/_includes/avis-utilisateur.html
@@ -1,3 +1,9 @@
+<script type="application/json" id="donneesAvisUtilisateur">
+  {
+    "featureFlagAvisUtilisateur": {% if site.env.FEATURE_FLAG_AVIS_UTILISATEUR == 'true' %}true{% else %}false{% endif %}
+  }
+</script>
+
 <script
   type="module"
   crossorigin
