[SOIN] Mutualise le comportement du selecteur simple

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -10,6 +10,7 @@
   --jaune-msc-hover: #ecca79;
   --jaune-msc-clique: #ddbd70;
   --jaune-clair-msc: #fff7db;
+  --gris-aide-saisie: #3a3a3a;
   --gris-desactive-fond: #e5e5e5;
   --gris-desactive-texte: #929292;
   --gris-secondaire-fond-hover: rgba(0, 0, 0, 0.04);
