--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -67,6 +67,10 @@ html {
   font-size: 16px;
   line-height: 24px;
   scroll-behavior: smooth;
+
+  :has(dialog[open]) {
+    overflow: hidden;
+  }
 }
 
 body {
