--- a/front/assets/styles/prestataires-qualifies.scss
+++ b/front/assets/styles/prestataires-qualifies.scss
@@ -15,5 +15,16 @@
     @include a-partir-de(sm) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
+
+    a.carte {
+      .contenu {
+        .labels {
+          span {
+            color: #666;
+            background-color: transparent;
+          }
+        }
+      }
+    }
   }
 }
