--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -51,6 +51,7 @@
       color: #000091;
       border: none;
       text-decoration: underline;
+      -webkit-text-decoration: underline;
       text-underline-offset: 4px;
       text-decoration-thickness: 1px;
       word-break: normal;
