--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -114,6 +114,7 @@ a {
 
   &.lien {
     text-decoration: underline solid var(--noir) 1px;
+    -webkit-text-decoration: underline solid var(--noir) 1px;
     text-underline-offset: 4px;
 
     &:hover {
@@ -339,6 +340,7 @@ footer {
 
       &:hover {
         text-decoration: underline solid var(--noir) 1px;
+        -webkit-text-decoration: underline solid var(--noir) 1px;
       }
     }
 
