[SOIN] Change le terme 'qualifies' en 'labellises'
...afin d'être cohérent avec le nouveau vocabulaire 'prestataires labellisés'

--- a/front/assets/styles/prestataires-labellises.scss
+++ b/front/assets/styles/prestataires-labellises.scss
@@ -3,7 +3,7 @@
 
 @use '../../assets/styles/responsive' as *;
 
-.prestataires-qualifies {
+.prestataires-labellises {
   padding: 48px var(--gouttiere) 72px;
   .contenu-section {
     display: grid;
