[CORRECTION] Applique un style souligné aux liens
...pour les navigateurs basés sur webkit (.e.g Safari)

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -114,7 +114,7 @@ a {
 
   &.lien {
     text-decoration: underline solid var(--noir) 1px;
-    -webkit-text-decoration: underline solid var(--noir) 1px;
+    -webkit-text-decoration: underline;
     text-underline-offset: 4px;
 
     &:hover {
@@ -340,7 +340,7 @@ footer {
 
       &:hover {
         text-decoration: underline solid var(--noir) 1px;
-        -webkit-text-decoration: underline solid var(--noir) 1px;
+        -webkit-text-decoration: underline;
       }
     }
 
