Évite de couper les cartes
...dans l'encart promotionnel de l'espace connecté. Pour cela on ne centre les cartes qu'à partir de 576px de large, sinon le centrage implique un découpage de la carte de gauche vers laquelle il n'est pas possible de scroller

--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -270,7 +270,9 @@ section {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    justify-content: center;
+    @include a-partir-de(sm) {
+      justify-content: center;
+    }
 
     .carte {
       flex: 0 0 282px;
@@ -446,4 +448,3 @@ section {
     }
   }
 }
-
