[UI-KIT] Passe à la version 1.36.1

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -24,6 +24,11 @@
   {% for style in page.styles %}
   <link rel="stylesheet" href="{{ style | relative_url }}">
   {% endfor %}
+  <link
+    href="https://lab-anssi-ui-kit-prod-s3-assets.cellar-c2.services.clever-cloud.com/1.36.1/dsfr-variables.css"
+    rel="stylesheet"
+    nonce="%%NONCE%%"
+  >
 
   {% if include.extra-js %}
     <script src="{{ include.extra-js | relative_url }}" type="module"></script>
