[CATALOGUE] Convertis les ressources `Publication` en `Contenu`

--- a/front/assets/styles/carte-item.scss
+++ b/front/assets/styles/carte-item.scss
@@ -71,7 +71,8 @@ a.carte {
 .carte.guide,
 .carte.ressource,
 .carte.service,
-.carte.outil {
+.carte.outil,
+.carte.contenu {
   width: 286px;
   gap: 0;
 
