--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -174,7 +174,9 @@ section {
   }
 
   .carte.service,
-  .carte.ressource {
+  .carte.ressource,
+  .carte.contenu,
+  .carte.outil {
     width: auto;
   }
 }
