--- a/front/assets/styles/carte-item.scss
+++ b/front/assets/styles/carte-item.scss
@@ -108,6 +108,7 @@ a.carte {
       box-shadow: 0 4px 12px 0 rgba(0, 0, 18, 0.32);
       transform: translateY(8px);
       transition: all 0.1s ease;
+      background-color: white;
     }
 
     figcaption {
