--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -431,6 +431,80 @@ footer {
   }
 }
 
+.barre-filtres {
+  fieldset {
+    margin: 0;
+    padding: 0 0 2rem;
+    border: 0;
+    border-bottom: 1px solid var(--gris-clair);
+
+    legend {
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 0.875rem;
+      line-height: 1.25rem;
+      margin-bottom: 1rem;
+      padding: 0;
+    }
+
+    ul {
+      display: grid;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      gap: 1rem;
+    }
+
+    label {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      cursor: pointer;
+
+      .libelle {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+      }
+
+      input[type='checkbox'] {
+        appearance: none;
+        border: 1px solid var(--noir);
+        border-radius: 4px;
+        width: 24px;
+        height: 24px;
+        margin: 0;
+        cursor: pointer;
+
+        &:checked {
+          background-color: var(--jaune-msc);
+
+          &::before {
+            content: '';
+            display: block;
+            margin: auto;
+            width: 6px;
+            height: 12px;
+            border-right: 2px var(--noir) solid;
+            border-bottom: 2px var(--noir) solid;
+            transform: translateY(2px) rotate(0.12turn);
+          }
+        }
+
+        &:indeterminate {
+          /* Ce style est prévu pour être cumulatif avec l'état coché */
+          &::before {
+            width: 9px;
+            height: 10px;
+            border-right: none;
+            transform: none;
+          }
+        }
+      }
+    }
+  }
+}
+
 .chapeau.fond-sombre {
   background: #0d0c21 url('/assets/images/motif-fond-service-opacite-16.png');
   padding: 24px var(--gouttiere) 40px;
