[CONTACTS] Affiche la note d’information

--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -877,3 +877,11 @@ code {
 section.statistiques {
   padding: 48px var(--gouttiere) 72px;
 }
+
+.note-information {
+  color: #666666;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
