--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -107,7 +107,7 @@ a {
   &[target='_blank']:after {
     content: '';
     display: block;
-    width: 16px;
+    min-width: 16px;
     height: 16px;
     background: url('/assets/images/icone-lien-externe.svg') no-repeat;
   }
