--- a/front/assets/styles/dsfr.scss
+++ b/front/assets/styles/dsfr.scss
@@ -23,3 +23,15 @@ h2 {
     line-height: 3.5rem;
   }
 }
+
+.texte-chapo-xl {
+  font-size: 1.25rem;
+  line-height: 2rem;
+  margin: 0 0 24px;
+}
+
+.texte-detail-sm {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  margin: 0 0 24px;
+}
