--- a/front/assets/styles/dsfr.scss
+++ b/front/assets/styles/dsfr.scss
@@ -30,8 +30,20 @@ h2 {
   margin: 0 0 24px;
 }
 
+.texte-article-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  margin: 0 0 24px;
+}
+
 .texte-detail-sm {
   font-size: 0.875rem;
   line-height: 1.5rem;
+  margin: 0 0 24px;
+}
+
+.texte-mention-xs {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
   margin: 0 0 24px;
 }
